@@ -48,6 +48,7 @@ import org.hisp.dhis.program.ProgramStage;
 import org.hisp.dhis.tracker.TrackerImportParams;
 import org.hisp.dhis.tracker.domain.Event;
 import org.hisp.dhis.tracker.preheat.TrackerPreheat;
+import org.hisp.dhis.tracker.preheat.mappers.CategoryOptionComboMapper;
 import org.springframework.stereotype.Component;
 
 /**
@@ -62,7 +63,6 @@ import org.springframework.stereotype.Component;
  */
 @RequiredArgsConstructor
 @Component
-@SupplierDependsOn( ClassBasedSupplier.class )
 public class EventCategoryOptionComboSupplier extends AbstractPreheatSupplier
 {
     @NonNull
@@ -73,7 +73,7 @@ public class EventCategoryOptionComboSupplier extends AbstractPreheatSupplier
     {
 
         List<Pair<CategoryCombo, Set<CategoryOption>>> events = params.getEvents().stream()
-            .filter( e -> StringUtils.isBlank( e.getAttributeOptionCombo() )
+            .filter( e -> e.getAttributeOptionCombo().isBlank()
                 && !StringUtils.isBlank( e.getAttributeCategoryOptions() ) )
             .map( e -> Pair.of( resolveProgram( preheat, e ), parseCategoryOptionIds( e ) ) )
             .filter( p -> p.getLeft() != null )
@@ -88,7 +88,8 @@ public class EventCategoryOptionComboSupplier extends AbstractPreheatSupplier
                 continue;
             }
 
-            CategoryOptionCombo aoc = categoryService.getCategoryOptionCombo( p.getLeft(), p.getRight() );
+            CategoryOptionCombo aoc = CategoryOptionComboMapper.INSTANCE
+                .map( categoryService.getCategoryOptionCombo( p.getLeft(), p.getRight() ) );
             preheat.putCategoryOptionCombo( p.getLeft(), p.getRight(), aoc );
         }
     }
